feat: add product API
